--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'base/main.html' %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
 <body>
-  <h1>Login</h1>
-  <form method="post" action="">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Login"/>
-  </form>
-    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+
+    <div class="header-bar">
+        <h1>Login</h1>
+    </div>
+
+    <div class="card-body">
+        <form method="post" action="">
+            {% csrf_token %}
+            {{form.as_p}}
+            <input class="button" type="submit" value="Login"/>
+        </form>
+        <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+    </div>
+
+
 </body>
+{% endblock content %}
 </html>
