--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'base/main.html' %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
 <body>
-  <h1>Register</h1>
-  <form method="post" action="">
-    {% csrf_token %}
-    {{form.as_p}}
-    <input type="submit" value="Register"/>
-  </form>
-    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+    <div class="header-bar">
+        <h1>Register</h1>
+    </div>
+
+    <div class="card-body">
+        <form method="post" action="">
+            {% csrf_token %}
+            <label>{{form.username.label}}</label>
+            {{form.username}}
+
+            <label>{{form.password1.label}}</label>
+            {{form.password1}}
+
+            <label>{{form.password2.label}}</label>
+            {{form.password2}}
+
+            <input style="margin-top: 10px;" class="button" type="submit" value="Register"/>
+        </form>
+        <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+    </div>
+
 </body>
+{% endblock content %}
 </html>
