--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'base/main.html' %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    <a href="{% url 'tasks' %}">Go Back</a>
-    <form method="post">
-        {% csrf_token %}
-        <p>Are your sure you want to delete this task? "{{task}}"</p>
-        <input type="submit" value="Delete"/>
-    </form>
+
+    <div class="header-bar">
+        <a href="{% url 'tasks' %}">&#8592; Go Back</a>
+    </div>
+
+    <div class="card-body">
+        <form method="post">
+            {% csrf_token %}
+            <p>Are your sure you want to delete this task? "{{task}}"</p>
+            <input class="button" type="submit" value="Delete"/>
+        </form>
+    </div>
 </body>
+{% endblock content %}
 </html>
