--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,37 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+{% extends 'base/main.html' %}
+{% block content %}
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-    {% if request.user.is_authenticated %}
-        <p>{{request.user}}</p>
-        <a href="{% url 'logout' %}">Log out</a>
-    {% else %}
-        <a href="{% url 'login' %}">Log in</a>
-    {% endif %}
+    <div class="header-bar">
+        <div>
+            <h1>Hello {{request.user|title}}</h1>
+            <h3 style="margin:0">You have <i>{{count}} incomplete task{{ count|pluralize:"s" }}</i></h3>
+        </div>
 
-    <hr>
-    <h1>My todo list {{color}}</h1>
-    <a href="{% url 'task-create' %}">Add Task</a>
-    <table>
-        <tr>
-            <th>Item</th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}">Log out</a>
+        {% else %}
+        <a href="{% url 'login' %}">Log in</a>
+        {% endif %}
+    </div>
+
+    <div id="search-add-wrapper">
+        <form method="get" style="margin-top: 20px; display: flex;">
+            <input type="text" name="search-area" value="{{search_input}}"/>
+            <input  class="button" type="submit" value="Search"/>
+        </form>
+        <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
+    </div>
+
+
+    <div class="task-items-wrapper">
         {% for task in tasks %}
-        <tr>
-            <td>{{task.title}}</td>
-            <td><a href="{% url 'task' task.id %}">View</a></td>
-            <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-            <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-        </tr>
+        <div class="task-wrapper">
+            {% if task.complete %}
+                <div class="task-title">
+                    <div class="task-complete-icon"></div>
+                    <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i>
+                </div>
+                <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            {% else %}
+                <div class="task-title">
+                    <div class="task-incomplete-icon"></div>
+                    <a href="{% url 'task-update' task.id %}">{{task}}</a>
+                </div>
+                <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            {% endif %}
+
+        </div>
         {% empty %}
             <h3>No items in list</h3>
         {% endfor %}
-    </table>
+    </div>
 </body>
+{% endblock content %}
 </html>
